# memega

./: .rustfmt.toml  Cargo.toml  Justfile  Makefile  README.md  notes.md
benches/: examples.rs
memega-examples/: Cargo.toml
memega-examples/benches/: examples.rs
memega-examples/src/: lib.rs  main.rs  op.rs
memega-examples/src/examples/: ackley.rs  expr.rs  func.rs  griewank.rs  hyper.rs  knapsack.rs  lgp.rs  mod.rs  rastrigin.rs  target_string.rs
memega-py/: Cargo.toml  pyproject.toml
memega-py/src/: lib.rs
src/: cfg.rs  eval.rs  lib.rs  main.rs  multirun.rs  runner.rs
src/evaluators/: mod.rs
src/evaluators/hyper/: builder.rs  eval.rs
src/evaluators/lgp/: builder.rs  cfg.rs  eval.rs  mod.rs
src/evaluators/lgp/vm/: asm.rs  cfg.rs  disasm.rs  exec.rs  lgpvm.rs  mod.rs  op.rs  opcode.rs  optimize.rs
src/evolve/: cfg.rs  evolver.rs  mod.rs  result.rs
src/examples/: ackley.rs  func.rs  griewank.rs  knapsack.rs  mod.rs  rastrigin.rs  target_string.rs
src/genr/: evaluated.rs  member.rs  mod.rs  params.rs  species.rs  unevaluated.rs
src/harness/: cfg.rs  evolver_harness.rs  harness_runner.rs  mod.rs
src/hyper/: builder.rs  mod.rs
src/lgp/: asm.rs  disasm.rs  exec.rs  mod.rs  op.rs  state.rs
src/ops/: crossover.rs  distance.rs  mod.rs  mutation.rs  sampling.rs  util.rs
src/run/: mod.rs  multirun.rs  result.rs  runner.rs
src/train/: cfg.rs  mod.rs  sampler.rs  trainer.rs
src/util/: distributions.rs  fmt_any.rs  mod.rs  run.rs
tests/: lgp.rs
