[package]
authors = ["Eliot Courtney <edgeworth.dev@gmail.com>"]
categories = ["algorithms", "science"]
description = """
Genetic algorithms library. Supports linear genetic programming
and evolution of GA hyper parameters.
"""
edition = "2024"
keywords = [
  "genetic",
  "ga",
  "evolutionary",
  "algorithm",
  "linear",
  "programming",
]
license = "MIT OR Apache-2.0"
name = "memega"
repository = "https://github.com/Edgeworth/memega"
version = "0.1.0"

[features]
default = ["tensorboard"]
tensorboard = ["dep:tensorboard-rs", "dep:chrono"]

[workspace]
members = ["memega-examples", "memega-py"]

[dependencies]
ahash = "0.8.12"
approx = "0.5.1"
chrono = {version = "0.4.41", optional = true}
derive_more = {version = "2.0.1", features = ["display", "deref", "deref_mut"]}
enumset = "1.1.10"
eyre = "0.6.12"
log = "0.4.28"
num-traits = "0.2.19"
rand = "0.9.2"
rand_distr = "0.5.1"
rayon = "1.11.0"
smallvec = "1.15.1"
stretto = {version = "0.8.4", features = ["sync"]}
strum = "0.27.2"
strum_macros = "0.27.2"
tempfile = "3.21.0"
tensorboard-rs = {version = "0.5.9", optional = true}
textwrap = "0.16.2"

[dev-dependencies]
pretty_assertions = "1.4.1"
