[package]
authors = ["Eliot Courtney <edgeworth.dev@gmail.com>"]
categories = ["algorithms", "science"]
description = "memega examples"
edition = "2024"
keywords = ["genetic", "ga", "evolutionary", "algorithm"]
license = "MIT OR Apache-2.0"
name = "memega-examples"
repository = "https://github.com/Edgeworth/memega"
version = "0.1.0"

[dependencies]
approx = "0.5.1"
clap = {version = "4.5.47", features = ["derive", "unicode", "wrap_help"]}
color-eyre = "0.6.5"
derive_more = "2.0.1"
enumset = "1.1.10"
eyre = "0.6.12"
log = "0.4.28"
memega = {version = "0.1.0", path = ".."}
num-traits = "0.2.19"
pretty_env_logger = "0.5.0"
rand = "0.9.2"
rand_distr = "0.5.1"
rayon = "1.11.0"
savage_core = "0.2.0"
smallvec = "1.15.1"
strum = "0.27.2"
strum_macros = "0.27.2"
textwrap = "0.16.2"

[dev-dependencies]
criterion = {version = "0.7.0", features = ["real_blackbox"]}

[[bench]]
harness = false
name = "examples"
