[package]
authors = ["Eliot Courtney <edgeworth.dev@gmail.com>"]
categories = ["algorithms", "science"]
description = "memega python package"
edition = "2024"
keywords = ["genetic", "ga", "evolutionary", "algorithm"]
license = "MIT OR Apache-2.0"
name = "memega-py"
repository = "https://github.com/Edgeworth/memega"
version = "0.1.0"

# Setup for PyO3:
[lib]
crate-type = ["cdylib"]
name = "memega"

[dependencies]
memega = {version = "0.1.0", path = ".."}
pyo3 = { version = "0.26.0", features = ["extension-module", "auto-initialize", "nightly", "eyre"] }
